Added div element to each template

--- a/about.html
+++ b/about.html
@@ -3,6 +3,15 @@
 <head>
 	<title>About - Joe's Pizza Co.</title>
 </head>
+
 <body>
+
+	<!-- Page Container -->
+	
+	<div id="container">
+
+
+	</div>
+	
 </body>
 </html>
