--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
 	<title>Joe's Pizza Co. - New York's Best Pizza</title>
 </head>
+
 <body>
+	<!-- Page Container -->
+	
+	<div id="container">
+
+
+	</div>
+
 </body>
 </html>
