Added a header element to each template

--- a/about.html
+++ b/about.html
@@ -9,9 +9,13 @@
 	<!-- Page Container -->
 	
 	<div id="container">
+		
+		<!-- Header -->
+		<header>
 
 
-	</div>
-	
+		</header>
+        </div>
+
 </body>
 </html>
