Added nav element to each template

--- a/about.html
+++ b/about.html
@@ -12,9 +12,16 @@
 		
 		<!-- Header -->
 		<header>
+        
+        <!-- Logo -->
+      <div id="logo">The Logo Goes Here</div>
 
-
-		</header>
+      <!-- Navigation -->
+      <nav>
+      	The Navigation Links Go Here
+      </nav>
+      
+        </header>
         </div>
 
 </body>
