Added <section> elements

--- a/about.html
+++ b/about.html
@@ -20,8 +20,14 @@
       <nav>
       	The Navigation Links Go Here
       </nav>
-      
+
         </header>
+
+        <!-- Main Content-->
+
+        <div></div>
+
+
         </div>
 
 </body>
