Added section element to content page template

--- a/about.html
+++ b/about.html
@@ -25,10 +25,13 @@
 
         <!-- Main Content-->
 
-        <div></div>
-
-
-        </div>
+        <div>
+        	<!--Page Text -->
+        	<section id="page-text">
+        		The good stuff goes here!
+        	</section>
+             </div>
+             </div>
 
 </body>
 </html>
