Added footer element to each template

--- a/about.html
+++ b/about.html
@@ -31,6 +31,11 @@
         		The good stuff goes here!
         	</section>
              </div>
+
+           <!-- Footer -->
+            <footer>
+            	The Boring Legal Stuff Goes Here
+            </footer>
              </div>
 
 </body>
