--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
            <section id="offers">
            	The Special Offers Go Here
            </section>
-            
-           </div>
+            </div>
+
+            <!-- Footer -->
+            <footer>
+            	The Boring Legal Stuff Goes Here
+            </footer>
 
           </body>
           </html>
