--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
 	<title>About - Joe's Pizza Co.</title>
+
+    <meta name="description" content="Joe's Pizza is the home of the best pizza in all of New York City.">
+
+	<meta name="keywords" content="pizzas,joes pizza,garlic bread,pepperoni">
+
+	<meta name="author" content="YOUR NAME">
+
 </head>
 
 <body>
