Link CSS to HTML

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta charset="utf-8">
 	<title>Joe's Pizza Co. - New York's Best Pizza</title>
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<meta name="description" content="Joe's Pizza is the home of the best pizza in all of New York City.">
 
 	<meta name="keywords" content="pizzas,joes pizza,garlic bread,pepperoni">
 
 	<meta name="author" content="YOUR NAME">
-	
+
 </head>
 
 <body>
