--- a/about.html
+++ b/about.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+	<meta charset="utf-8">
 	<title>About - Joe's Pizza Co.</title>
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
     <meta name="description" content="Joe's Pizza is the home of the best pizza in all of New York City.">
 
