Added heading for the logo

--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
 		<header>
         
         <!-- Logo -->
-      <div id="logo">The Logo Goes Here</div>
+     <div id="logo">
+      	<h1>Joe's Pizza Co.</h1>
+      </div>
 
       <!-- Navigation -->
       <nav>
