--- a/about.html
+++ b/about.html
@@ -31,7 +31,18 @@
 
       <!-- Navigation -->
       <nav>
-      	The Navigation Links Go Here
+      	<ul>
+           <li><a href="index.html" title="Joe's Pizza Co.">Home</a></li>
+
+            <li><a href="about.html" title="Find out more about Joe's Pizza Co." class="active">About</a></li>
+
+             <li><a href="news.html" title="Latest News about Joe's Pizza Co.">News</a></li>
+
+             <li><a href="menu.html" title="The restaurant menu for Joe's Pizza Co.">Menu</a></li>
+
+             <li><a href="locations.html" title="Joe's Pizza Co. restaurant locations.">Locations</a></li>
+
+      	</ul>
       </nav>
 
         </header>
@@ -47,8 +58,13 @@
 
            <!-- Footer -->
             <footer>
-            	The Boring Legal Stuff Goes Here
+            	<small>&copy; 2012 Joe's Pizza Co. All Rights Reserved</small>
+
+            	-
+
+            	<a href="sitemap.html" title="Links to all the pages on this website">Sitemap</a>
             </footer>
+
              </div>
 
 </body>
