Added headings and <hgroup>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <div>
            <!-- Feature -->
            <section id="feature">
-           	The Main Feature Banner Goes Here
+           	<hgroup>
+              <h1>New York's Best Pizza</h1>
+              <h2>joe's pepperoni special</h2>
+            </hgroup>
            </section>	
 
            <!--Home Text -->
