Added text to the homepage

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 
            <!--Home Text -->
            <section id="home-text">
-           	The Company Information Goes Here
+           	<h1>Welcome to Joe's Pizza Co.</h1>
+            <p>
+              We pride ourselves on serving up the best pizzas in New York City. Come and visit one of our family-friendly restaurants and take a look at our wide range of authentic Italian pizzas. We can also deliver direct to your door with our speedy takeaway services. 
+            </p>
+            <p>
+              Please take a look at the <a href="locations.html">Locations</a> page for more information about where you can find our fantastic restaurants.
+            </p>
            </section>
            
            
