Added Special Offers

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
            
            <!--Special Offers -->
            <section id="offers">
-           	The Special Offers Go Here
+           	<h1>Special Offers</h1>
+            <ul>
+              <li>10% Off All Pizzas When You Eat In!</li>
+              <li>20% Off Joe's Pepperoni Special with the promo code NYBESTPIZZA</li>
+            </ul>
            </section>
             </div>
 
