--- a/about.html
+++ b/about.html
@@ -52,7 +52,15 @@
         <div>
         	<!--Page Text -->
         	<section id="page-text">
-        		The good stuff goes here!
+        		<h1>About Joe's Pizza Co.</h1>
+            <p>Established in 1984, Joe's Pizza Co. prides itself on serving up authentic Italian pizzas with a New York twist. Since opening their first restaurant at 310 West 38th Street, Joe's has expanded into two more restaurants distributed throughout New York.</p>
+
+            <p>Our founder Joe Balochio has always said <q>"A great pizza starts with selecting quality, fresh ingredients from local suppliers."</q> This belief is embodied in the company and the pizzas that you will eat in our restaurants will never contain any poor quality or cheap ingredients. We take great pride in the quality of our pizzas.
+            </p>
+
+            <p>
+              Joe's Pizza Co. is a member of the National Restaurant Association (<abbr title="National Restaurant Association">NRA</abbr>).
+            </p>
         	</section>
              </div>
 
