Added images to menu

--- a/menu.html
+++ b/menu.html
@@ -58,38 +58,41 @@
               <section>
                <h1>Pizzas</h1>
                 <table id="pizzas">
+                  <caption>
+                    Our fantastic range of pizzas presented here has won us 6 awards over the past 2 years.
+                  </caption>
                 <thead>
                   <tr>
-                    <th>Menu Item</th>
-                    <th>Description</th>
-                    <th>Price</th>
+                    <th scope="col">Menu Item</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
                   </tr>
                 </thead>
                 <tbody>
                 <tr>
-                  <td>Joe's Pepperoni Special</td>
+                  <th scope="row">Joe's Pepperoni Special</th>
                   <td>
                     Select pepperoni with our signature spicy tomato sauce
                   </td>
                   <td>13.00</td>
                 </tr>
                 <tr>
-                  <td>Margherita</td>
+                  <th scope="row">Margherita</th>
                   <td>Oregano, mozzarella and tomato</td>
                   <td>10.50</td>
                 </tr>
                 <tr>
-                  <td>Hawaiian</td>
+                  <th scope="row">Hawaiian</th>
                   <td>Ham and Pineapple</td>
                   <td>12.00</td>
                 </tr>
                 <tr>
-                  <td>Pollo</td>
+                  <th scope="row">Pollo</th>
                   <td>Chicken and Roast Peppers</td>
                   <td>12.00</td>
                 </tr>
                 <tr>
-                  <td>Mexican Chicken</td>
+                  <th scope="row">Mexican Chicken</th>
                   <td>Spicy Chicken with jalapenos</td>
                   <td>12.50</td>
                 </tr>
@@ -101,23 +104,26 @@
               <section>
                 <h1>Garlic Breads</h1>
                 <table id="garlic-bread">
+                  <caption>
+                    These handmade garlic breads are the best you will find anywhere in New York.
+                  </caption>
                   <thead>
                     <tr>
-                      <th>Menu Item</th>
-                      <th>Price</th>
+                      <th scope="col">Menu Item</th>
+                      <th scope="col">Price</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Garlic Bread</td>
+                      <th scope="row">Garlic Bread</td>
                       <td>4.00</td>
                     </tr>
                     <tr>
-                      <td>Garlic Bread with Double Cheese</td>
+                      <th scope="row">Garlic Bread with Double Cheese</td>
                       <td>4.50</td>
                     </tr>
                     <tr>
-                      <td>Garlic Bread with Sun-Ripened Tomato</td>
+                      <th scope="row">Garlic Bread with Sun-Ripened Tomato</th>
                       <td>4.80</td>
                     </tr>
                   </tbody>
@@ -128,31 +134,62 @@
               <section>
                 <h1>Side Dishes</h1>
                 <table id="sides">
+                  <caption>
+                    How about trying one of these tasty side dishes with your mean?
+                  </caption>
                   <thead>
                     <tr>
-                      <th>Menu Item</th>
-                      <th>Price</th>
+                      <th scope="col">Menu Item</th>
+                      <th scope="col">Price</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Potato Wedges</td>
+                      <th scope="row">Potato Wedges</th>
                       <td>3.00</td>
                     </tr>
                     <tr>
-                      <td>French Fries</td>
+                      <th scope="row">French Fries</td>
                       <td>2.50</td>
                     </tr>
                     <tr>
-                      <td>6 Onion Rings</td>
+                      <th scope="row">6 Onion Rings</th>
                       <td>3.50</td>
                     </tr>
                   </tbody>
                 </table>
              </section>
             </div>
-        	</section>
-             </div>
+            
+             <div id="menu-images">
+
+              <figure>
+                <img src="img/pepperoni-pizza.jpeg" alt="A pepperoni pizza presented on a wooden chopping board." width="240" height="180">
+
+                <figcaption>
+                  Joe's Pepperoni Special
+                </figcaption>
+              </figure>
+
+              <figure>
+                <img src="img/margherita-pizza.jpeg" alt="A margherita pizza with mozarella, baby tomatoes and oregano." width="240" height="180">
+
+                <figcaption>
+                  Margherita - Mozzarella and Oregano
+                </figcaption>
+              </figure>
+
+              <figure>
+                <img src="img/pollo-pizza.jpeg"
+                alt="A pollo pizza with roasted yellow peppers." width="240" height="180">
+
+                <figcaption>
+                  Pollo - Chicken with Roast Peppers
+                </figcaption>
+              </figure>
+              </div>
+            </section>
+          </div>
 
            <!-- Footer -->
             <footer>
