Added fields to booking form

--- a/bookings.html
+++ b/bookings.html
@@ -58,9 +58,36 @@
             </p>
 
             <form action="bookings.php" method="POST">
+              
+              <div class="field">
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name">
+              </div>
+
+              <div class="field">
+                <label for="phone">Phone:</label>
+                <input type="text" name="phone" id="phone">
+              </div>
+
+              <div class="field">
+                <label for="restaurant">Restaurant:</label>
+                <input type="text" name="restaurant" id="restaurant">
+                </div>
+
+                <div class="field">
+                  <label for="bookingTime">Booking Time:</label>
+                  <input type="text" name="bookingTime" id="bookingTime">
+                </div>
+
+                <div class="field">
+                  <label for="guests">Number of Guests:</label>
+                  <input type="text" name="guests" id="guests">
+                </div>
+
+
 
             </form>
-            
+
         	</section>
              </div>
 
