Added input and label elements

--- a/bookings.html
+++ b/bookings.html
@@ -69,6 +69,11 @@
                 <input type="text" name="phone" id="phone">
               </div>
 
+               <div class="field">
+                <label for="email">Email:</label>
+                <input type="text" name="email" id="email">
+              </div>
+
               <div class="field">
                 <label for="restaurant">Restaurant:</label>
                 <input type="text" name="restaurant" id="restaurant">
@@ -82,6 +87,11 @@
                 <div class="field">
                   <label for="guests">Number of Guests:</label>
                   <input type="text" name="guests" id="guests">
+                </div>
+
+                <div class="field">
+                  <label for="marketing">Please tick this box if you would like to recieve special offers from Joe's Pizza Co.</label>
+                  <input type="checkbox" name="marketing" id="marketing" value="1">
                 </div>
 
 
