added text area element to form

--- a/bookings.html
+++ b/bookings.html
@@ -2,36 +2,36 @@
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
-	<title>Bookings - Joe's Pizza Co.</title>
+  <meta charset="utf-8">
+  <title>Bookings - Joe's Pizza Co.</title>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <meta name="description" content="Joe's Pizza is the home of the best pizza in all of New York City.">
 
-	<meta name="keywords" content="pizzas,joes pizza,garlic bread,pepperoni">
+  <meta name="keywords" content="pizzas,joes pizza,garlic bread,pepperoni">
 
-	<meta name="author" content="YOUR NAME">
+  <meta name="author" content="YOUR NAME">
 
 </head>
 
 <body>
 
-	<!-- Page Container -->
-	
-	<div id="container">
-		
-		<!-- Header -->
-		<header>
+  <!-- Page Container -->
+  
+  <div id="container">
+    
+    <!-- Header -->
+    <header>
         
         <!-- Logo -->
      <div id="logo">
-      	<h1>Joe's Pizza Co.</h1>
+        <h1>Joe's Pizza Co.</h1>
       </div>
 
       <!-- Navigation -->
       <nav>
-      	<ul>
+        <ul>
            <li><a href="index.html" title="Joe's Pizza Co.">Home</a></li>
 
             <li><a href="about.html" title="Find out more about Joe's Pizza Co.">About</a></li>
@@ -42,7 +42,7 @@
 
              <li><a href="locations.html" title="Joe's Pizza Co. restaurant locations.">Locations</a></li>
 
-      	</ul>
+        </ul>
       </nav>
 
         </header>
@@ -50,9 +50,9 @@
         <!-- Main Content-->
 
         <div>
-        	<!--Page Text -->
-        	<section id="page-text">
-        		<h1>Request a Booking</h1>
+          <!--Page Text -->
+          <section id="page-text">
+            <h1>Request a Booking</h1>
             <p>
               Please use the form below to submit a booking request. You will then be contacted by a staff member who will confirm your booking.
             </p>
@@ -94,20 +94,22 @@
                   <input type="checkbox" name="marketing" id="marketing" value="1">
                 </div>
 
+                <div class="field">
+                  <label for="message">Special Requests:</label>
+                  <textarea name="message" id="message" cols="50" rows="10"></textarea>
+                </div>
+               </form>
 
-
-            </form>
-
-        	</section>
+          </section>
              </div>
 
            <!-- Footer -->
             <footer>
-            	<small>&copy; 2012 Joe's Pizza Co. All Rights Reserved</small>
+              <small>&copy; 2012 Joe's Pizza Co. All Rights Reserved</small>
 
-            	-
+              -
 
-            	<a href="sitemap.html" title="Links to all the pages on this website">Sitemap</a>
+              <a href="sitemap.html" title="Links to all the pages on this website">Sitemap</a>
             </footer>
 
              </div>
