--- a/bookings.html
+++ b/bookings.html
@@ -98,6 +98,10 @@
                   <label for="message">Special Requests:</label>
                   <textarea name="message" id="message" cols="50" rows="10"></textarea>
                 </div>
+
+                <div class="field">
+                  <button type="submit">Request Booking</button>
+                </div>
                </form>
 
           </section>
