Added more fields to form and legends

--- a/bookings.html
+++ b/bookings.html
@@ -58,25 +58,33 @@
             </p>
 
             <form action="bookings.php" method="POST">
+              <fieldset>
+                <legend>Contact Details</legend>
+                <div class="field">
+                  <label for="name">Name:</label>
+                  <input type="text" name="name" id="name">
+                </div>
+                <div class="field">
+                  <label for="phone">Phone:</label>
+                  <input type="text" name="phone" id="phone">
+                </div>
+                <div class="field">
+                  <label for="email">Email:</label>
+                  <input type="text" name="email" id="email">
+                </div>
+              </fieldset>
+
+              <fieldset>
+                <legend>Booking Information</legend>
               
-              <div class="field">
-                <label for="name">Name:</label>
-                <input type="text" name="name" id="name">
-              </div>
-
-              <div class="field">
-                <label for="phone">Phone:</label>
-                <input type="text" name="phone" id="phone">
-              </div>
-
-               <div class="field">
-                <label for="email">Email:</label>
-                <input type="text" name="email" id="email">
-              </div>
 
               <div class="field">
                 <label for="restaurant">Restaurant:</label>
-                <input type="text" name="restaurant" id="restaurant">
+                <select name="restaurant" id="restaurant">
+                  <option>310 West 38th Street, NY</option>
+                  <option>2450 Broadway, NY</option>
+                  <option>200 West 44th Street, NY</option>
+                </select>
                 </div>
 
                 <div class="field">
@@ -98,6 +106,7 @@
                   <label for="message">Special Requests:</label>
                   <textarea name="message" id="message" cols="50" rows="10"></textarea>
                 </div>
+              </fieldset>
 
                 <div class="field">
                   <button type="submit">Request Booking</button>
