added the booking link to all the pages

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
              <li><a href="locations.html" title="Joe's Pizza Co. restaurant locations.">Locations</a></li>
 
+             <li><a href="bookings.html" title="Make a booking">Bookings</a></li>
+
       	</ul>
       </nav>
     
