--- a/menu.html
+++ b/menu.html
@@ -42,6 +42,8 @@
 
              <li><a href="locations.html" title="Joe's Pizza Co. restaurant locations.">Locations</a></li>
 
+             <li><a href="bookings.html" title="Make a booking">Bookings</a></li>
+
       	</ul>
       </nav>
 
@@ -135,7 +137,7 @@
                 <h1>Side Dishes</h1>
                 <table id="sides">
                   <caption>
-                    How about trying one of these tasty side dishes with your mean?
+                    How about trying one of these tasty side dishes with your meal?
                   </caption>
                   <thead>
                     <tr>
