--- a/sitemap.html
+++ b/sitemap.html
@@ -42,6 +42,9 @@
 
              <li><a href="locations.html" title="Joe's Pizza Co. restaurant locations.">Locations</a></li>
 
+             <li><a href="bookings.html" title="Make a booking">Bookings</a></li>
+\
+
       	</ul>
       </nav>
 
@@ -60,6 +63,7 @@
               <li><a href="news.html" title="Latest News about Joe's Pizza Co.">News</a></li>
               <li><a href="menu.html" title="The restaurant menu for Joe's Pizza Co.">Menu</a></li>
               <li><a href="locations.html" title="Joe's Pizza Co. restaurant locations.">Locations</a></li>
+              <li><a href="bookings.html" title="Links to all the pages on this website">Bookings</a></li>
               <li><a href="sitemap.html" title="Links to all the pages on this website">Sitemap</a></li>
             </ul>
            </section>
